[gd_scene load_steps=10 format=3 uid="uid://dmeyxqrmciogn"]

[ext_resource type="Script" uid="uid://c0h0p4kkyel7y" path="res://scenes/enemy/IA_enemy_flying/enemy-flying.gd" id="1_mx2l5"]
[ext_resource type="Texture2D" uid="uid://c5yfh6kythhvw" path="res://assets/enemy/fly1-Sheet.png" id="3_pm0i0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh6ne"]
size = Vector2(28, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfixc"]
atlas = ExtResource("3_pm0i0")
region = Rect2(0, 0, 31, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0207d"]
atlas = ExtResource("3_pm0i0")
region = Rect2(31, 0, 31, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_083lt"]
atlas = ExtResource("3_pm0i0")
region = Rect2(62, 0, 31, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_aclb5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfixc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0207d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_083lt")
}],
"loop": true,
"name": &"walking",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijaua"]
size = Vector2(32, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_pm0i0"]
radius = 99.0202

[node name="Enemy-flying" type="CharacterBody2D"]
script = ExtResource("1_mx2l5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_fh6ne")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aclb5")
animation = &"walking"
autoplay = "walking"
frame_progress = 0.36162105

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -13.0
offset_top = -42.0
offset_right = 13.0
offset_bottom = -16.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 11.0
offset_top = 1.0
offset_right = 16.0
offset_bottom = 24.0
text = "!"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ijaua")
debug_color = Color(0.9707081, 0.17353451, 5.7756904e-07, 0.41960785)

[node name="RayCast2D" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(100, 0)

[node name="player_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_range"]
shape = SubResource("CircleShape2D_pm0i0")
debug_color = Color(0.7454036, 0.46336532, 7.70092e-07, 0.41960785)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="player_range" to="." method="_on_player_range_body_entered"]
[connection signal="body_exited" from="player_range" to="." method="_on_player_range_body_exited"]
